# System-Integration

11._websockets/: app.js  package-lock.json  package.json  stuff.html
2._modules/node/: app.js
2._modules/node/public/: duck.html  duckFactory.js  motherDuck.js
2._modules/python/: main.py
2._modules/python/libs/: LibraryA.py  LibraryB.py
data_format_translations_service/: node.js  package-lock.json  package.json  pyproject.toml  python.py  text.csv  text.txt  text.yml
date_servers_01/: node.js  package-lock.json  package.json  pyproject.toml  python.py
file_format_bonanza/: node.js  package-lock.json  package.json  python.py  text.json  text.xml
