[tool.poetry]
name = "date-servers-01"
version = "0.1.0"
description = ""
authors = ["Teodor_Jonasson <teodor_jonasson@hotmail.com>"]
readme = "README.md"
packages = [{include = "date_servers_01"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
